src/test/deca/context/valid/inheritance/instanceof_valid.deca
// Description :
//    Utilisation de instanceof avec sous-classe
//
// Resultats :
//    OK

class P { }

class Q extends P { }

class R {
    boolean check(P p) {
        return p instanceof Q;
    }
}

{
}
